# ComfyUI_HavocsCall_Custom_Nodes

./: .gitignore  CHANGELOG.md  LICENSE  README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
nodes/: Basic_Nodes.py  Combination_Nodes.py  Conversion_Nodes.py  Logic_Nodes.py  Math_Nodes.py  Prompt_Styler_Nodes.py  Switch_Nodes.py
nodes/Styler Data/: Example.json
nodes/styler_data/: Example.json
