[project]
name = "havocscall_custom_nodes"
description = ""
version = "1.1.0"
license = {file = "LICENSE"}

[project.urls]
Repository = https://github.com/HavocsCall/ComfyUI_HavocsCall_Custom_Nodes
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "havocscall"
DisplayName = "HavocsCall_Custom_Nodes"
Icon = ""
