[project]
name = "havocscall_custom_nodes"
description = "A few custom quality of life nodes. Check out https://github.com/HavocsCall/ComfyUI_HavocsCall_Custom_Nodes for more info"
version = "1.1.0"
license = "https://github.com/HavocsCall/ComfyUI_HavocsCall_Custom_Nodes/blob/master/LICENSE"

[project.urls]
Repository = "https://github.com/HavocsCall/ComfyUI_HavocsCall_Custom_Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "havocscall"
DisplayName = "HavocsCall_Custom_Nodes"
Icon = ""