[project]
name = "havocscall_custom_nodes"
description = "Just some nodes that help me."
version = "3.0"
license = "https://github.com/HavocsCall/ComfyUI_HavocsCall_Custom_Nodes/blob/master/LICENSE"

[project.urls]
Repository = "https://github.com/HavocsCall/ComfyUI_HavocsCall_Custom_Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "havocscall"
DisplayName = "HavocsCall_Custom_Nodes"
Icon = ""